@@ -1,3 +1,8 @@
+2009-06-16  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/term.c (test_term): Initialize bounding box.  Exercise a few
+	more terminal properties if available:  transparency, enhanced text. 
+
 2009-06-12  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
